part1/1_13/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project-app
  ports:
    - name: appport
      port: 2345
      protocol: TCP
      targetPort: 80
    - name: serviceport
      port: 2346
      protocol: TCP
      targetPort: 3001
